# exoplanets-retrieval-augmented-generation

./: .gitignore  CAMBIOS-MEJORAS-UX.md  GUIA-PROBABILIDAD-SISTEMA.md  INTEGRACION-API-README.md  README.md
backend/: .gitignore  CHECKLIST.txt  LEEME-PRIMERO.md  README.md  SOLUCION-PYTHON-ERROR.md  diagnostico.bat  fix-python-install.bat  main.py  pyproject.toml  requirements.txt  run-dev.bat  run-dev.sh  run-prod.bat  run-prod.sh  setup-environment.bat  setup-environment.ps1  setup-environment.sh  test_argon2.py  test_mysql_connection.py  test_probability_extraction.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  models.py  schemas.py
backend/app/routers/: auth.py  files.py  request.py  results.py  upload.py
backend/app/utils/: jwt.py  security.py  turnstile.py
database/: 01_create_database.sql  02_create_tables.sql  03_insert_initial_data.sql  04_add_probability_percentage.sql
frontend-admin/: wrangler.toml
frontend-admin/src/: index.html
frontend-admin/src/acceso/: index.html
frontend-admin/src/css/: login.css  style.css
frontend-admin/src/js/: api-client.js  api-config.js  auth-utils.js  dashboard.js  login.js
frontend-public/: wrangler.toml
frontend-public/src/: index.html
frontend-public/src/css/: style.css
frontend-public/src/js/: api-client.js  (+2 more)
utils/backend-postman/: EXAMPLES.md  exoplanets-backend-api.postman_collection.json  setup-backend.bat
utils/vectorize-inspector/: .gitignore  CHANGELOG.md  README.md  export-all.js  package-lock.json  package.json  run.bat  test-ui.html  tsconfig.json  wrangler.toml
(+8 files in other folders)
